--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <p>This is a para</p>
         <p>This is a para</p>
         <p>This is a para</p>
+        <p>This is from testing branch</p>
 </body>
 </html>
