demo.html modified

--- a/demo.html
+++ b/demo.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <p>This file is created in development branch</p>
+    <from>
+        <input type="text" value="Jhon">\
+        <input type="submit">
+    </from>
 </body>
 </html>
